apps/colima/canvas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canvas
  namespace: default
  labels:
    app: canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canvas
  template:
    metadata:
      labels:
        app: canvas
    spec:
      containers:
        - name: canvas
          image: canvas-koohyomin:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: canvas-data
