apps/colima/canvas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canvas
  namespace: default
  labels:
    app: canvas
spec:
  type: ClusterIP
  selector:
    app: canvas
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
