apps/colima/canvas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvas
  namespace: default
  labels:
    app: canvas
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: 9b1820c5-3168-4638-a1f0-9fe1585eda94.cfargotunnel.com
spec:
  ingressClassName: nginx
  rules:
    - host: canvas.koohyom.in
      http:
        paths:
          - path: /view
            pathType: Prefix
            backend:
              service:
                name: canvas
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: canvas
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: canvas
                port:
                  number: 80
